# gh-app2

./: Cargo.toml  Dockerfile  GEMINI.md  Gemfile  Package.swift  README.md  build.gradle  build.sbt  cloudformation.yaml  composer.json  docker-compose.yml  go.mod  helm-values.yaml  kubernetes.yaml  main.tf  mix.exs  package-license.json  package.json  packages.config  pom.xml  pubspec.yaml  reputation-packages.json  requirements-license.txt  requirements-triple-equals.txt  requirements.txt  sca-nuget.csproj  secrets.tf  terraform_iac2.tf  vulnerable_app.c  vulnerable_app.cs  vulnerable_app.go  vulnerable_app.java  vulnerable_app.js  vulnerable_app.kt  vulnerable_app.php  vulnerable_app.pl  vulnerable_app.py  vulnerable_app.rb  vulnerable_app.rs  vulnerable_app.sh  (+2 more)
.augment/rules/: arnica-code-rules.md
.cursor/rules/: arnica-code-rules.mdc
config/: api-keys.py  app-secrets.env  ci-cd-secrets.yml  cloud-credentials.json  database.yml  secrets.json
pip/: requirements.txt
