[package]
name = "gh-app2"
version = "0.1.0"
edition = "2021"

# SCA - Rust crates with known vulnerabilities
[dependencies]
# openssl - multiple CVEs including CVE-2022-0778 (infinite loop) - CVSS 7.5
openssl = "0.10.38"

# hyper HTTP - CVE-2021-21299 - request smuggling
hyper = "0.14.4"

# tokio - CVE-2021-45710 - data race
tokio = { version = "1.8.0", features = ["full"] }

# actix-web - CVE-2020-35901 - DoS
actix-web = "3.3.2"

# serde - CVE-2022-40897 (via PyPI but Rust ecosystem impacted)
serde = { version = "1.0.130", features = ["derive"] }

# crossbeam - CVE-2022-23639 - data race
crossbeam = "0.8.0"

# smallvec - CVE-2021-25900 - buffer overflow
smallvec = "1.6.0"

# regex - CVE-2022-24713 - ReDoS
regex = "1.5.4"

# prost - CVE-2022-1798 - stack overflow via malformed protobuf
prost = "0.9.0"

# lettre SMTP - CVE-2021-38189 - header injection
lettre = "0.9.6"

# tar - CVE-2021-38511 - path traversal
tar = "0.4.35"

# yaml-rust - CVE-2021-25904 - stack overflow
yaml-rust = "0.4.4"

# chrono - CVE-2020-26235 - SEGFAULT
chrono = "0.4.19"

# rustls - CVE-2020-25574 - panic on invalid input
rustls = "0.19.0"

# nix - CVE-2021-31867 - memory corruption
nix = "0.20.0"
